# AnomalyDetection

./: .gitignore  CMakeLists.txt  README.md
CScripts/FRTOSTemplate/lib/: CMakeLists.txt
CScripts/FRTOSTemplate/lib/tcp_client/: CMakeLists.txt
CScripts/FRTOSTemplate/lib/tcp_client/include/: picow_tcp_client.h
CScripts/FRTOSTemplate/lib/tcp_client/src/: picow_tcp_client.c
CScripts/FRTOSTemplate/src/: CMakeLists.txt  main.c
CScripts/FRTOS_Project/: .gitignore  CMakeLists.txt
CScripts/FRTOS_Project/lib/: CMakeLists.txt
CScripts/FRTOS_Project/lib/FatFs_SPI/: CMakeLists.txt
CScripts/FRTOS_Project/lib/FreeRTOS/: CMakeLists.txt
CScripts/FRTOS_Project/lib/adc_tim/: CMakeLists.txt
CScripts/FRTOS_Project/lib/app/: CMakeLists.txt
CScripts/FRTOS_Project/lib/app/include/: app.h
CScripts/FRTOS_Project/lib/app_tasks/: CMakeLists.txt
CScripts/FRTOS_Project/lib/lib_adc/: CMakeLists.txt
CScripts/FRTOS_Project/lib/mpu6050/: CMakeLists.txt
CScripts/FRTOS_Project/lib/my_lib/: CMakeLists.txt
CScripts/FRTOS_Project/lib/ping_pong/: CMakeLists.txt
CScripts/FRTOS_Project/lib/sd_card/: CMakeLists.txt
CScripts/FRTOS_Project/lib/tcp_client/: CMakeLists.txt
CScripts/FRTOS_Project/lib/tcp_client/include/: picow_tcp_client.h
CScripts/FRTOS_Project/lib/tcp_client/src/: picow_tcp_client.c
CScripts/FRTOS_Project/src/: CMakeLists.txt  main.c
CScripts/rp2040-freertos-anomalycapture/: CMakeLists.txt
CScripts/rp2040-freertos-anomalycapture/src/: CMakeLists.txt  main.c
CScripts/tcpip/client/: tcp_client.c  tcp_client.h
PyScripts/: tcp_server-cpy.py  tcp_server.py
(+23 files in other folders)
